# streamer_analysis

./: .gitignore  CMakeLists.txt  Prompter.cpp  Prompter.h  README.md  main.cpp  thresh_test.cpp
data/: README.md  correlation.csv  prefix_lookup.csv  stats.txt  streamer_angles.csv
data/analysis/: stats.txt  streamer_angle.csv  streamer_angle_diff.csv  streamer_diff.csv
data/clear/: correlation.csv  stats.txt  streamer_angles.csv
scripts/: README.md  analyze_correlations.py  diff_stats.py  interpret_results.py  process_correlations.py  utils.py
src/: Correlation.h  ImageData.h  NameInterpreter.cpp  NameInterpreter.h  NameProcessor.cpp  NameProcessor.h  PairList.cpp  PairList.h  Prompter.cpp  Prompter.h  main.cpp  processing.cpp  processing.h  testing.cpp  writing.cpp  writing.h
test/: ImageDataTest.h  PairListTest.h  main.cpp  processingTest.h
